# data_analysis

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  build.ps1  requirements.txt  setup.cfg
data_analysis/: structs.py  utils.py
doc/source/: conf.py  data.rst  index.rst  usage.rst
doc/source/api/: data_analysis.analyze.rst  data_analysis.clean.rst  data_analysis.plot.rst  data_analysis.plot_model.rst  data_analysis.process.rst  data_analysis.rst  data_analysis.structs.rst  data_analysis.summary.rst  data_analysis.utils.rst
src/data_analysis/: __init__.py  analyze.py  clean.py  plot.py  plot_model.py  process.py  structs.py  summary.py
src/data_science_helpers.egg-info/: PKG-INFO  SOURCES.txt
