[metadata]
name = data-analysis-helpers
version = 0.0.7
author = Shivnaren Srinivasan
author_email = shivnaren@gmail.com
description = Data Science helpers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShivnarenSrinivasan/data_analysis
project_urls =
    Bug Tracker = https://github.com/ShivnarenSrinivasan/data_analysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    seaborn
python_requires = >=3.7

[options.packages.find]
where = src
